--- a/src/Installer/StructureFragment.wxs
+++ b/src/Installer/StructureFragment.wxs
@@ -1,55 +1,10 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<?define Property_ProductVersion = "0.1.0" ?>
-<?define Property_ProductCode = "a16c2b67-2b15-4f92-b8d3-e2bd98ab7d48" ?>
-<?define Property_UpgradeCode = "be3717b5-4eac-4d7d-ba75-c5b0e3d83782" ?>
-<?define RTMProductVersion="0.0.0" ?>
-
+<?xml version="1.0"?>
 <Wix xmlns="http://schemas.microsoft.com/wix/2006/wi"
-     xmlns:netfx="http://schemas.microsoft.com/wix/NetFxExtension"
      xmlns:util="http://schemas.microsoft.com/wix/UtilExtension">
-	<Product Id="*" Name="TracExplorer $(var.Property_ProductVersion)" Language="1033" 
-           Version="$(var.Property_ProductVersion)" Manufacturer="vstrac.devjavu.com" UpgradeCode="$(var.Property_UpgradeCode)">
-		<Package Id="*" InstallerVersion="200" Compressed="yes" />
-
-		<Media Id="1" Cabinet="Installer.cab" EmbedCab="yes" />
-
-    <PropertyRef Id="NETFRAMEWORK20"/>
-    <Condition Message="This application requires .NET Framework 2.0. Please install the .NET Framework then run this installer again.">
-      <![CDATA[Installed OR NETFRAMEWORK20]]>
-    </Condition>
-
-    <!-- Prevent downgrading -->
-    <CustomAction Id="PreventDowngrading"
-              Error="Newer version already installed." />
-    
-    <InstallExecuteSequence>
-      <Custom Action="PreventDowngrading"
-		          After="FindRelatedProducts">NEWPRODUCTFOUND</Custom>
-      <RemoveExistingProducts After="InstallFinalize" />
-    </InstallExecuteSequence>
-
-    <InstallUISequence>
-      <Custom Action="PreventDowngrading"
-		          After="FindRelatedProducts">NEWPRODUCTFOUND</Custom>
-    </InstallUISequence>
-
-    <Upgrade Id="$(var.Property_UpgradeCode)">
-      <UpgradeVersion Minimum="$(var.Property_ProductVersion)" IncludeMinimum="no" OnlyDetect="yes" Property="NEWPRODUCTFOUND" />
-      <UpgradeVersion Minimum="$(var.RTMProductVersion)" IncludeMinimum="yes" Maximum="$(var.Property_ProductVersion)" IncludeMaximum="no" Property="UPGRADEFOUND" />
-    </Upgrade>
-
-    <Icon Id="trac.ico" SourceFile="trac.ico"/>
-    <Property Id="ARPPRODUCTICON" Value="trac.ico" />
-
-    <Property Id="WIXUI_INSTALLDIR" Value="INSTALLLOCATION"/>
-    <UIRef Id="WixUI_Mondo" />
-    <WixVariable Id="WixUILicenseRtf" Value="license.rtf" />
-    <WixVariable Id="WixUIDialogBmp" Value="TracDialog.bmp" />
-    <WixVariable Id="WixUIBannerBmp" Value="TracBanner.bmp" />
-
+	<Fragment Id="StructureFragment">
     <Directory Id="TARGETDIR" Name="SourceDir">
-			<Directory Id="ProgramFilesFolder">
-				<Directory Id="INSTALLLOCATION" Name="TracExplorer">
+      <Directory Id="ProgramFilesFolder">
+        <Directory Id="INSTALLLOCATION" Name="TracExplorer">
           <Directory Id="INSTALL_BIN" Name="bin">
             <Directory Id="INSTALL_BIN_de" Name="de"/>
             <Directory Id="INSTALL_BIN_en" Name="en"/>
@@ -61,8 +16,8 @@
             <Directory Id="INSTALL_BIN_zh_CHS" Name="zh-CHS"/>
             <Directory Id="INSTALL_BIN_zh_CHT" Name="zh-CHT"/>
           </Directory>
-				</Directory>
-			</Directory>
+        </Directory>
+      </Directory>
       <Directory Id="ProgramMenuFolder">
         <Directory Id="ApplicationProgramsFolder" Name="TracExplorer"/>
       </Directory>
@@ -74,7 +29,7 @@
       </Component>
       <Component Id="TracExplorer.TSVNTrac.dll" Guid="9B906EC1-5E59-41f9-A245-21271A746319">
         <File Source="$(var.TracExplorer.TSVNTrac.TargetPath)" KeyPath="yes" Checksum="yes" />
-        
+
         <RegistryValue Root="HKCR" Key="TracExplorer.TSVNTrac.TracProvider" Value="TracExplorer.TSVNTrac.TracProvider" Type="string" Action="write"/>
         <RegistryValue Root="HKCR" Key="TracExplorer.TSVNTrac.TracProvider\CLSID" Value="{05BC2E49-E116-44E3-BF43-DD90EEC031DD}" Type="string" Action="write"/>
 
@@ -164,28 +119,5 @@
         <RegistryValue Root="HKCU" Key="Software\TracExplorer" Name="installed" Type="integer" Value="1" KeyPath="yes"/>
       </Component>
     </DirectoryRef>
-
-    <Feature Id="Common" Title="Common" Level="1" Absent="disallow" >
-      <ComponentRef Id="TracExplorer.Common.dll" />
-      <ComponentRef Id="ApplicationShortcut" />
-		</Feature>
-    <Feature Id="TSVNTrac" Title="Trac Provider for TortoiseSVN" Level="1" Absent="allow">
-      <ComponentRef Id="TracExplorer.TSVNTrac.dll" />
-      <ComponentRef Id="Interop.BugTraqProvider.dll"/>
-    </Feature>
-    <Feature Id="VSTrac" Title="Visual Studio Trac Integration" Level="1" Absent="allow">
-      <ComponentRef Id="TracExplorer.VSTrac.dll"/>
-      <ComponentRef Id="TracExplorer.VSTrac.AddIn"/>
-      <ComponentRef Id="CookComputing.XmlRpcV2.dll"/>
-      <ComponentRef Id="de_TracExplorer.VSTrac.resources.dll"/>
-      <ComponentRef Id="en_TracExplorer.VSTrac.resources.dll"/>
-      <ComponentRef Id="es_TracExplorer.VSTrac.resources.dll"/>
-      <ComponentRef Id="fr_TracExplorer.VSTrac.resources.dll"/>
-      <ComponentRef Id="it_TracExplorer.VSTrac.resources.dll"/>
-      <ComponentRef Id="ja_TracExplorer.VSTrac.resources.dll"/>
-      <ComponentRef Id="ko_TracExplorer.VSTrac.resources.dll"/>
-      <ComponentRef Id="zh_CHS_TracExplorer.VSTrac.resources.dll"/>
-      <ComponentRef Id="zh_CHT_TracExplorer.VSTrac.resources.dll"/>
-    </Feature>
-	</Product>
+	</Fragment>
 </Wix>
