--- a/src/Installer/TracExplorer.wxs
+++ b/src/Installer/TracExplorer.wxs
@@ -10,7 +10,7 @@
            Name="$(var.ProductName) $(var.VersionNumberUserVisible) $(var.StatusVersion)" 
            Language="1033" 
            Version="$(var.VersionNumberInternal)" 
-           Manufacturer="$(var.PackageManufacturer)" 
+           Manufacturer="TracExplorer" 
            UpgradeCode="$(var.Property_UpgradeCode)">
     
 		<Package Id="*" 
@@ -51,8 +51,15 @@
       <UpgradeVersion Property="PREVIOUSVERSIONSINSTALLED" Maximum="$(var.VersionNumberInternal)" IncludeMaximum="no" />
     </Upgrade>
 
+    <!-- Add/Remove Programs (ARP) related properties ................................ -->
     <Icon Id="trac.ico" SourceFile="trac.ico"/>
     <Property Id="ARPPRODUCTICON" Value="trac.ico" />
+    <Property Id="ARPCOMMENTS">$(var.PackageComments)</Property>
+    <Property Id="ARPCONTACT">$(var.PackageManufacturer)</Property>
+    <Property Id="ARPHELPLINK">$(var.TracExplorerOrg)</Property>
+    <Property Id="ARPNOMODIFY">1</Property>
+    <Property Id="ARPNOREPAIR">1</Property>
+    <Property Id="ARPURLINFOABOUT">$(var.TracExplorerOrg)</Property>
 
     <Property Id="WIXUI_INSTALLDIR" Value="INSTALLLOCATION"/>
     <UIRef Id="WixUI_Mondo" />
@@ -60,15 +67,21 @@
     <WixVariable Id="WixUIDialogBmp" Value="TracDialog.bmp" />
     <WixVariable Id="WixUIBannerBmp" Value="TracBanner.bmp" />
 
-    <Feature Id="Common" Title="Common" Level="1" Absent="disallow" >
+    <Feature Id="Common" Title="Common" 
+             Description ="Common files"
+             Level="1" Absent="disallow" >
       <ComponentRef Id="TracExplorer.Common.dll" />
       <ComponentRef Id="ApplicationShortcut" />
 		</Feature>
-    <Feature Id="TSVNTrac" Title="Trac Provider for TortoiseSVN" Level="1" Absent="allow">
+    <Feature Id="TSVNTrac" Title="Trac Provider for TortoiseSVN" 
+             Description ="Uses the IBugTraqProvider from TortoiseSVN to select Trac tickets in the commit dialog"
+             Level="1" Absent="allow">
       <ComponentRef Id="TracExplorer.TSVNTrac.dll" />
       <ComponentRef Id="Interop.BugTraqProvider.dll"/>
     </Feature>
-    <Feature Id="VSTrac" Title="Visual Studio Trac Integration" Level="1" Absent="allow">
+    <Feature Id="VSTrac" Title="Visual Studio Trac Integration" 
+             Description ="Add VSTrac into Visual Studio 2005 / 2008 (minimum standard version)" 
+             Level="1" Absent="allow">
       <ComponentRef Id="TracExplorer.VSTrac.dll"/>
       <ComponentRef Id="TracExplorer.VSTrac.AddIn"/>
       <ComponentRef Id="CookComputing.XmlRpcV2.dll"/>
