--- a/src/Installer/TracExplorer.wxs
+++ b/src/Installer/TracExplorer.wxs
@@ -80,7 +80,7 @@
       <ComponentRef Id="Interop.BugTraqProvider.dll"/>
     </Feature>
     <Feature Id="VSTrac" Title="Visual Studio Trac Integration" 
-             Description ="Add VSTrac into Visual Studio 2005 / 2008 (minimum standard version)" 
+             Description ="Add VSTrac into Visual Studio 2005 or 2008 (minimum standard version)" 
              Level="1" Absent="allow">
       <ComponentRef Id="TracExplorer.VSTrac.dll"/>
       <ComponentRef Id="TracExplorer.VSTrac.AddIn"/>
